# Residency-Day-1-Group-Project-Proposal

./: README.md  app.py  app_batch.py  app_figma.py  app_streaming.py  app_streamlit.py  pyproject.toml  test.ipynb
Static/: style.css
src/: visa.yaml  workflow.py
templates/: chat.html  chatbot.html  welcome.html
